ingress/default-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: "letsencrypt-production"
spec:
  ingressClassName: public
  tls:
    - hosts:
      - pihole.lan
      - heimdall.lan
      - unifi.lan
      - deluge.lan
      secretName: dot-lan-tls
  rules:
  - host: heimdall.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: heimdall
            port: 
              number: 80
  - host: deluge.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: deluge-tcp
            port: 
              number: 8112
  - host: unifi.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: unifi-controller-tcp
            port: 
              number: 8080
